# zeroAgent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agent.yaml
docs/: PROGRESS.md  REQUIREMENTS.md
examples/: quickstart.py  run_with_tools.py
skills/code-explorer/: SKILL.md
skills/fs-explorer/: SKILL.md
skills/web-fetch/: SKILL.md
src/zeroagent/: __init__.py  agent.py  cli.py  config.py
src/zeroagent/core/: __init__.py  loop.py  trace.py
src/zeroagent/llm/: __init__.py  base.py  errors.py  openai_compat.py  registry.py
src/zeroagent/serve/: __init__.py  _reload_target.py  api.py
src/zeroagent/serve/web/: index.html
src/zeroagent/serve/web/assets/: app.js  styles.css
src/zeroagent/skills/: __init__.py  loader.py  skill.py
src/zeroagent/tools/: __init__.py  base.py  policy.py  registry.py
src/zeroagent/tools/builtin/: __init__.py  code_explorer.py  fs.py  glob.py  grep.py  http.py  opencli.py  python_eval.py
tests/: conftest.py
tests/unit/: test_agent.py  test_code_explorer.py  test_config.py  test_loop.py  test_loop_events.py  test_openai_compat.py  test_serve_api.py  test_skills.py  test_tools_basic.py  test_tools_opencli.py  test_tools_search.py
