[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeroagent"
version = "0.1.0"
description = "A pluggable Python agent framework, evolving toward a Harness Engineer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zerobliu" }]
keywords = ["agent", "llm", "mcp", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

# 运行时依赖（M1 最小集）
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anyio>=4.4",
    "tenacity>=8.3",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]
# 可选 Provider
anthropic = ["anthropic>=0.34"]
dashscope = ["dashscope>=1.20"]
# 中期：MCP 工具
mcp = ["mcp>=1.0"]
# Web 服务（FastAPI + SSE 流式 + 静态前端）
serve = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
]
# 全量
all = [
    "anthropic>=0.34",
    "dashscope>=1.20",
    "mcp>=1.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
]

[project.scripts]
zeroagent = "zeroagent.cli:app"

[project.urls]
Homepage = "https://github.com/zerobliu/zeroagent"

# ───────── 工具配置 ─────────

[tool.hatch.build.targets.wheel]
packages = ["src/zeroagent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # 行长由 formatter 控制

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/zeroagent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
